k8s-yaml/roles/prometheus/files/contr-manager-down-svc-ep.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: kube-controller-manage-monitor
  labels:
    app.kubernetes.io/name: kube-controller-manager
spec:
  type: ClusterIP
#  clusterIP: None
  sessionAffinity: None
#  selector:
#    component: kube-controller-manager
  ports:
    - name: https-metrics
      port: 10257
      protocol: TCP
      targetPort: 10257


---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app.kubernetes.io/name: kube-controller-manager
  name: kube-controller-manage-monitor
  namespace: kube-system
subsets:
  - addresses:
      - ip: 192.168.0.211
      - ip: 192.168.0.212
    ports:
      - name: https-metrics
        port: 10257
        protocol: TCP
