k8s-yaml/roles/prometheus/files/scheduler-down-svc-ep.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: kube-scheduler-monitor
  labels:
    app.kubernetes.io/name: kube-scheduler
spec:
  type: ClusterIP
  #  clusterIP: None
  sessionAffinity: None
  #  selector:
  #    component: kube-controller-manager
  ports:
    - name: https-metrics
      port: 10259
      protocol: TCP
      targetPort: 10259

---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app.kubernetes.io/name: kube-scheduler
  name: kube-scheduler-monitor
  namespace: kube-system
subsets:
  - addresses:
      - ip: 192.168.0.211
      - ip: 192.168.0.212
    ports:
      - name: https-metrics
        port: 10259
        protocol: TCP
