k8s-yaml/roles/prometheus/files/prometheus-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1 #extensions/v1beta1 (k8s v1.19版前使用)
metadata:
  name: prometheus-ingress
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: alert.wax.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: alertmanager-main
                port:
                  number: 9093
    - host: grafana.wax.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: prome.wax.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: prometheus-k8s
                port:
                  number: 9090
